--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
 body {
-    padding: 0;
+    padding: 10px;
     margin: 0;
     background-color: #333;
     text-align: center;
+}
+
+a { 
+    float: right;
+    color: white;
+    font-weight: bold;
+    margin: 1em 1em 0 0;
+    text-decoration: none;
 }
