--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,17 @@
 body {
-    padding: 10px;
+    padding: 0;
     margin: 0;
     background-color: #333;
     text-align: center;
 }
 
+.nav{
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
 a { 
-    float: right;
     color: white;
     font-weight: bold;
     margin: 1em 1em 0 0;
